finished section on EGS

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,15 +1,17 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
 \newacronym{doe}{DOE}{United States Department of Energy}
-\newacronym{ep}{E\&P}{Exploration and Production}
+\newacronym{egs}{EGS}{Enhanced Geothermal Systems}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
-\newacronym{ghg}{GHG}{Greenhouse Gas}
+\newacronym{ep}{E\&P}{Exploration and Production}
 \newacronym{gdh}{GDH}{Geothermal District Heating}
+\newacronym{ghg}{GHG}{Greenhouse Gas}
 \newacronym{gto}{GTO}{Geothermal Technologies Office}
 \newacronym{ieo}{IEO}{International Energy Outlook}
 \newacronym{irena}{IRENA}{International Renewable Energy Agency}
 \newacronym{kgra}{KGRAs}{Known Geothermal Resource Areas}
 \newacronym{kwh}{kWh}{Kilowatt-Hour}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
+\newacronym{lanl}{LANL}{Los Alamos National Lab}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
