--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -14,15 +14,22 @@ The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S. energy gen
  
 \begin{figure}[htp]
 \centering
-\includegraphics[scale=0.6]{Figure001-EIA_projections}
-\caption[U.S. EIA projections based on the AEO2021 reference case]{U.S. EIA projections of (Left) U.S. electricity generation by sector and (Right) individual contributions by renewable type based on the AEO2021 reference case \protect\citep{us_energy_information_administration_annual_2021}}
+\includegraphics[scale=0.65]{Figure-EIA_projections}
+\caption[U.S. EIA projections based on the AEO2021 reference case]{U.S. EIA projections of (Left) U.S. electricity generation by sector and (Right) individual contributions by renewable type based on the AEO2021 reference case \protect\citep{us_energy_information_administration_annual_2021}.}
 \label{fig:eia_2021_projections}
 \end{figure}
 
-Lazard Asset Management breaks renewables down by \acrlong{lcoe} (\acrshort{lcoe}) in U.S. dollars/\acrshort{mwh}, where LCOE is the estimated lifetime average net cost per unit energy of an electricity generating plant. In their 2020 analysis, intermittent energy sources like wind and utility-scale solar are already cost-competitive with fossil fuel-derived sources \citep{lazard_lazards_2020}. Geothermal, an “always on” source of power, ranges from \$59-\$101/MWh LCOE, making it second-tier in cost competitiveness but comparable to community and rooftop solar installations \citep{lazard_lazards_2020}. Overall, the transition in energy sources away from fossil fuel dominance is in progress, and the demand for energy in support of population growth and country development will remain a driver over the next 30 years.
+Lazard Asset Management breaks renewables down by \acrlong{lcoe} (\acrshort{lcoe}) in U.S. dollars/\acrshort{mwh}, where LCOE is the estimated lifetime average net cost per unit energy of an electricity generating plant. In their 2020 analysis, intermittent energy sources like wind and utility-scale solar are already cost-competitive with fossil fuel-derived sources (Figure \ref{fig:lazard_lcoe}) \citep{lazard_lazards_2020}. Geothermal, an “always on” source of power, ranges from \$59-\$101/MWh LCOE, making it second-tier in cost competitiveness but comparable to community and rooftop solar installations \citep{lazard_lazards_2020}. Overall, the transition in energy sources away from fossil fuel dominance is in progress, and the demand for energy in support of population growth and country development will remain a driver over the next 30 years.
+ 
+\begin{figure}[htp]
+\centering
+\includegraphics[scale=0.2]{Figure-Lazard-LCOE}
+\caption[Lazard Levelized Cost of Energy 2020 projections]{Cost comparison between different energy sources based on LCOE analysis conducted by Lazard Asset Management. For specific assumptions and caveats related to the analysis, see \protect\citep{lazard_lazards_2020}.}
+\label{fig:lazard_lcoe}
+\end{figure}
 
 \section{Upstream Commercial Pressures}\label{ch1:upstream}
-Businesses focused on \acrlong{ep} (\acrshort{ep}) of oil and gas face a growing list of pressures influencing future corporate strategy. On one hand, the increase in energy consumption predicted in the AEO and IEO make the case for steadily ramping up production to provide plentiful supply to meet global demand. However, geopolitical tensions, state-ownership of oil companies, and breakthrough technologies create a volatile landscape unforgiving of an unsophisticated production approach. In just the past 15 years, major downturns in oil prices were triggered by a mixture of factors: the financial crisis tied to banking practices and housing market instability in 2008 \citep{singh_2007-2008_2021}, increased production from U.S. unconventional plays and supply decisions from the \acrlong{opec} (\acrshort{opec}) in 2014 \citep{lioudis_what_2021}, and a price war between Russia and Saudi Arabia coinciding with a global pandemic in 2020 \citep{blessing_what_2021}. Additional uncertainty comes from national oil companies that control the majority of the world’s petroleum reserves, production, and rights for exploration and development. These state-run enterprises can eschew free market principles, favoring national priorities over efficient operations, oil field sustainability, business transparency, and maximizing shareholder value \citep{pirog_role_2007}. Meanwhile, disruptive technologies like precise directional drilling and hydrofracturing have provided access to previously cost-prohibitive reserves, changing the balance of power as countries like the U.S. and China become less reliant on foreign hydrocarbon imports \citep{shuen_dynamic_2014}.
+Businesses focused on \acrlong{ep} (\acrshort{ep}) of oil \& gas face a growing list of pressures influencing future corporate strategy. On one hand, the increase in energy consumption predicted in the AEO and IEO make the case for steadily ramping up production to provide plentiful supply to meet global demand. However, geopolitical tensions, state-ownership of oil companies, and breakthrough technologies create a volatile landscape unforgiving of an unsophisticated production approach. In just the past 15 years, major downturns in oil prices were triggered by a mixture of factors: the financial crisis tied to banking practices and housing market instability in 2008 \citep{singh_2007-2008_2021}, increased production from U.S. unconventional plays and supply decisions from the \acrlong{opec} (\acrshort{opec}) in 2014 \citep{lioudis_what_2021}, and a price war between Russia and Saudi Arabia coinciding with a global pandemic in 2020 \citep{blessing_what_2021}. Additional uncertainty comes from national oil companies that control the majority of the world’s petroleum reserves, production, and rights for exploration and development. These state-run enterprises can eschew free market principles, favoring national priorities over efficient operations, oil field sustainability, business transparency, and maximizing shareholder value \citep{pirog_role_2007}. Meanwhile, disruptive technologies like precise directional drilling and hydrofracturing have provided access to previously cost-prohibitive reserves, changing the balance of power as countries like the U.S. and China become less reliant on foreign hydrocarbon imports \citep{shuen_dynamic_2014}.
 
 Layered on top of these strategic influences are the unexpected events that have enormous influence over energy production and distribution operations. The 2020 outbreak of the COVID-19 virus acted as an accelerator on longer-term trends of digital transformation and decarbonization in the oil \& gas industry. In the wake of a 25\% decrease in global demand, companies responded with massive layoffs and restructuring, a heightened focus on digitalization, and portfolio rationalizations that include shale write-downs and asset divestments \citep{deloitte_2021_2020}. Extreme weather events are presenting reflective moments on how energy is managed now and in the future. Winter storm Uri blanketed Texas in record low temperatures in February 2021, shutting down liquid fuel supply and electricity generation from natural gas, coal, nuclear, and wind-based power plants, with downstream power blackouts, water outages, and surge pricing on electricity that impacted millions \citep{harc_winter_2021,lazard_lazards_2020}. And additional threats loom in the cyberworld as malicious hacking activities have rippling social and financial implications. One such attack on Colonial Pipeline, which handles almost 50\% of the liquid fuels supplied to the U.S. East Coast, led to gasoline shortages, price spikes, chemical factory shut-downs, and worldwide news coverage until the hefty ransom was paid in May 2021 \citep{sanger_pipeline_2021}.
 
@@ -63,5 +70,17 @@ Based on the aforementioned opportunity to integrate uncertainty characterizatio
 \end{itemize}
 
 \section{Thesis Outline}\label{ch1:outline}
-This thesis is structured as follows: \\ 
-Chapter 2 provides relevant background on geothermal systems and energy capture, followed by a literature review on data-driven risk mitigation methods for exploration and facility planning. Chapters 3-4 explain the sources of data used in the thesis, preparation of that data, and the methods used for predictive analytics (Chapter 3) and cost modeling of geothermal facility project designs (Chapter 4). Also discussed is how uncertainties are defined and incorporated into both thesis focus areas. Chapters 5-6 describe the analytics and modeling results for exploration and development planning, respectively. Finally, Chapter 7 frames the overall results from a systems perspective, and Chapters 8 and 9 provide opportunities for future work and the final thesis conclusions. 
+
+\begin{figure}[!htp]
+%\centering
+\begin{minipage}[b]{0.55\textwidth}
+This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is structured as follows: \\
+
+Chapter 2 provides relevant background on the origins of geothermal heat, types of geothermal systems, and a literature review on methods for risk management in geothermal exploration and facility planning. Chapters 3-4 explain the sources of data used in the thesis, preparation steps applied to that data, and the methods used for predictive analytics (Chapter 3) and cost modeling of geothermal facility project designs (Chapter 4). Also discussed is how uncertainty can be characterized and incorporated into both thesis focus areas. Chapters 5-6 describe the analytics and cost modeling results for exploration and development planning, respectively. Finally, Chapter 7 examines how learnings from the previous chapters can be framed as different risk mitigation actions in a comprehensive geothermal strategy. Chapters 8 and 9 conclude the thesis with a summary of thesis insights and a list of future work opportunities.
+\end{minipage} \hfill
+\begin{minipage}[b]{0.40\textwidth}
+\includegraphics[scale=0.4]{Figure-ThesisWorkflow}
+\caption[Flow chart for thesis structure]{Flow chart of thesis structure. Chapter number placement indicates the content described in that chapter.}
+\label{fig:thesis_flow}
+\end{minipage}
+\end{figure}
