--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -1,15 +1,15 @@
 \chapter{Background}\label{ch2:background}
 
 \section{Geothermal Systems}\label{ch2:geosys}
-\subsection{Heat Origins}
-\subsubsection{Accretion}
+\subsection{Heat Origins}\label{ch2:heatorig}
+\subsubsection{Accretion}\label{ch2:accrete}
 The story of geothermal energy begins with the birth of planet Earth. Approximately 4.56 billion years ago \citep{allegre_age_1995, patterson_age_1956}, the Earth coalesced as a molten body heated by repeated impacts with objects in the early solar system like the planetesimal impact responsible for the formation of the Moon \citep{stevenson_origin_2014}. Over tens of millions of years, the Earth compacted, cooled, and differentiated, settling into the familiar layered structure of a solid inner core, liquid outer core, viscous mantle, and outermost brittle crust \citep[~p. 7]{press_understanding_2004}. The intense heat from that early accretionary history remains concentrated in the core, where temperatures - a matter of continued scientific inquiry - fall in the range of 6000±500 K \citep[~p. 372]{fowler_solid_2005}. Present day heat flux estimates for the whole Earth amount to 87 mW/m\textsuperscript{2}, \texttt{\char`\~}60\% of which flows through conductive and convective pathways from the deep interior to outermost crust \citep{stein_heat_1995}. Diffuse conductive heat transfer occurs everywhere across of the Earth’s surface, but heat flow concentrates along tectonic plate boundaries. In fact, the subduction-sourced volcanoes that ring the Pacific Ocean, divergent zones at the mid-ocean ridges and East African rift, and major strike-slip boundaries like the San Andreas fault zone all mark locations where focused heat anomalies are already being tapped by geothermal installations \citep[~p. 16]{dipippo_geothermal_2012}.
-\subsubsection{Radioactive Decay}
+\subsubsection{Radioactive Decay}\label{ch2:radio}
 The second major source of heat within the Earth is the decay of radioactive isotopes. Early radioactive heating included radioisotopes with short half-lives like Aluminum-26 and Hafnium-182, which are now no longer present \citep[~p. 16]{glassley_geothermal_2015}. Among the radioactive elements contributing the most to heating the crust today are uranium (U), thorium (Th), rubidium (Rb), and potassium (K) \citep[~p. 17]{glassley_geothermal_2015}. The decay of these and other elements accounts for 40\% of the crustal thermal budget \citep{stein_heat_1995}. But element abundances are not distributed uniformly throughout the crust. On average, continental crust, particularly the upper continental crust, has significantly higher concentrations of U, Th, and K radioactive elements compared to oceanic crust, and both types of crust are 1-2 orders of magnitude more enriched than the mantle \citep[~p. 276]{fowler_solid_2005}. This relationship holds for representative igneous rock types; granite generates more heat than basalt, and both out-produce ultramafic rocks like peridotites \citep[~p. 276]{fowler_solid_2005}.
-\subsection{Heat Measurements}
-\subsubsection{Geothermal Gradient}
+\subsection{Heat Measurements}\label{ch2:heatmeas}
+\subsubsection{Geothermal Gradient}\label{ch2:geotherm}
 Average subsurface conditions show a steady increase in temperature with depth, commonly referred to as the geothermal gradient, sustained by the flow of original accretionary heat and generated radioactive heat. On average, the gradient for continental crust is \texttt{\char`\~}30\textdegree C/km \citep[~p. 209]{press_understanding_2004}. However, deviations from this value are common and reflect the complexity of the rock record in an area. The crust comprises a distinct set of layers, or strata, that vary in composition and rock type. Unlike the aforementioned igneous formations that can be relatively homogeneous, surface processes mix sediments from a variety of original source rocks, sometimes sorting them well and sometimes not, before they get deposited and indurated into sedimentary formations \citep[~p. 164-168]{press_understanding_2004}. Alteration from fluids, heat, and pressure can then modify the composition of these rocks, causing constituent minerals to change form and arrangement to create metamorphic rocks \citep[~p. 195-205]{press_understanding_2004}. The spatial and depth variations in these formations create subsurface compositional heterogeneity, directly reflected in rock properties. Thermal conductivity, specifically the ability to move deep-sourced heat to shallower depths, and radioactive element abundance, or the ability to generate additional heat in situ, can therefore vary in all directions in the subsurface. Thermal heterogeneity can be further compounded by anomalies created from salt movement \citep[~p. 164-168]{press_understanding_2004}, magmatic intrusions, or global tectonic processes. It therefore takes a good understanding of the geology and geologic history to determine the geothermal gradient of a region.
-\subsubsection{Heat Flow}
+\subsubsection{Heat Flow}\label{ch2:heatflow}
 Fundamentally, heat moves from hot to cold (Second Law of Thermodynamics) at a rate that linearly scales with the thermal gradient. Simple, one-dimensional thermal conduction can be characterized by the relationship \citep[~p. 270]{fowler_solid_2005}:
 \begin{equation}\label{eq:conduction}
 q = -k \frac{\nabla T}{x}
@@ -29,10 +29,10 @@ Heat flow measurements capture the flux of heat through the Earth’s surface as
 \caption[Heat flow across the continental U.S.]{Heat flow estimates for the continental United States, plotted in Google Earth with data layer from \protect\citep{lucazeau_analysis_2019}}
 \label{fig:heatflow}
 \end{figure}
-\subsection{System Fundamentals}
+\subsection{System Fundamentals}\label{ch2:sysfund}
 The conventional concept of a geothermal system consists of five key entities \citep[~p. 9]{dipippo_geothermal_2012}:
 \renewcommand{\labelenumi}{\roman{enumi}}
-\begin{enumerate}
+\begin{enumerate}\label{list:sysreq}
    \item Heat source of significant size and temperature
    \item Permeability, typically in the form of a fracture network within crystalline rock
    \item Ample volume of working fluids, e.g. water from precipitation and drainage
@@ -40,7 +40,7 @@ The conventional concept of a geothermal system consists of five key entities \c
    \item Consistent, reliable fluid recharge
 \end{enumerate}
 
-\subsubsection{Hydrothermal Systems}
+\subsubsection{Hydrothermal Systems}\label{ch2:hydro}
 If naturally present, the combination of these five elements defines a hydrothermal system. As water percolates down, captures heat from the permeable thermal reservoir, and gets trapped beneath the sealing caprock, a small fraction of the resource can escape to the surface to produce distinctive geothermal manifestations like fumaroles, hot pools, geysers, mud pots, and discolored or altered rocks (Figures \ref{fig:lassen-geysers} and \ref{fig:lassen-mudpot}). These features are strong indicators of hydrothermal resources at depth.
 \begin{figure}[h!]
 \centering
@@ -69,9 +69,15 @@ The topic of this thesis instead concerns the use of moderate- to high-temperatu
 
 A comprehensive assessment of moderate and high-temperature \acrlong{kgra} (\acrshort{kgra}) by the \acrlong{usgs} (\acrshort{usgs}) determined the U.S. has conventional geothermal (hydrothermal) power generation potential of \texttt{\char`\~}9,000 MWe, and an additional \texttt{\char`\~}30,000 MWe potential exists in undiscovered resources \citep{williams_assessment_2008}. The recent DOE GeoVision study notes hydrothermal potential in Alaska and Hawaii alone are \texttt{\char`\~}8000 MWe due to their unique tectonic environments (Aleutian subduction zone and Hawaiian hot spot, respectively), and high-case model estimates for the continental U.S. forecast an installed capacity of \texttt{\char`\~}16.5 GW by 2050 for known and unknown hydrothermal resources \citep{augustine_geovision_2019,hamm_overview_2019}.
 
-\subsubsection{Enhanced Geothermal Systems}
+\subsubsection{Enhanced Geothermal Systems}\label{ch2:egs}
+In some cases, the potential for a geothermal system exists even when one or more of the fundamental elements listed in Section \ref{ch2:sysfund} are missing. These unconventional geothermal systems, often referred to as \acrlong{egs} (\acrshort{egs}), contain a significant heat source but lack either the adequate permeability or sufficient rechargeable working fluids to meet the requirements of a hydrothermal system. A broader definition for EGS includes thermal production from sedimentary and crystalline tight rock, poorly-performing hydrothermal systems, co-production from oil \& gas operations, and even thermal recovery directly from magma \citep{tester_future_2006}. Focusing on the more common tight rock scenario, EGS systems work by artificially creating or improving reservoir permeability and ensuring sustained flow rates of fluids through the reservoir \citep[~p. 281]{glassley_geothermal_2015}. Fluids pumped down an injection well pass through a stimulated fracture network, heat up through direct contact with the thermal reservoir, and return to the surface via one or more producing wells to serve as inlet fluids for a power plant \textbf{MISSING FIGURE}. Reservoir stimulation generally involves hydraulic fracturing (hydro-fracking or just “fracking”) techniques to create pathways connecting injector-producer pairs. The associated technology and capabilities are thus well-aligned with unconventional oil \& gas operations \citep{petty_synergies_2009}. 
+
+EGS can provide the bridge between geothermal use in niche hydrothermal environments and a more comprehensive adoption of geothermal energy for electricity generation across the United States. The sources of subsurface heat (see Section \ref{ch2:heatorig}) exist everywhere, so accessing a range of temperatures that could support power production relies on drilling deep enough and creating the artificial conditions necessary for heat capture. \acrlong{lanl} (\acrshort{lanl}) validated the EGS approach in crystalline rock at Fenton Hill beginning in 1974, soon after which feasibility studies were conducted in Japan, Germany, the U.K., and France \citep{breede_systematic_2013}. Among the most notable EGS projects that provided key lessons learned are The Geysers (U.S), Soultz-sous-Forêts (France), and Cooper Basin (Australia). The Geysers stands out as the largest geothermal power-generating complex in the world, providing \texttt{\char`\~}1,000 MWe for California even after 60 years of steam production \citep{jelacic_evaluation_2008,williams_assessment_2008}. Although drilling issues and public concern over induced seismicity halted efforts \citep{manish03_united_2009}, rock stimulation experiments in the Northwest Geysers proved distinct reservoirs can be developed adjacent to active hydrothermal operations \citep{pan_establishment_2019}. The Soultz project commenced in 1987 with one injector and two producers drilled to 5 km depth to support a 1.5 MW power plant built in 2007-2008 \citep[~p. 463]{dipippo_geothermal_2012}. In addition to many experimental lessons learned around drilling, hydrofracturing, chemical stimulation, scaling and corrosion, Soultz today supports both electricity production and direct-use district heating \citep{durst_overview_2013}. Cooper Basin, the largest EGS demonstration project in the world, showed great promise after a 6-year proof of concept phase \citep{stephens_assessing_2010}. However, the project halted in 2015 due poor stimulation results tied to an unrecognized fault, highlighting the importance of robust structural appraisal in assessing geothermal prospects \citep{holl_what_2015}. 
+
+As the fate of these projects might suggest, the long-standing promise of EGS has not yet been fully realized. However, several active projects supported by the DOE and NREL (e.g. EDGE, FORGE, EGS Collab) are providing the insights necessary to mature subsurface models, drilling technologies, and stimulation methods for more widespread EGS adoption \citep{hamm_geothermal_2021}. And recent technology advances and partnerships involving start-ups Fervo Energy \citep{moss_google_2021,shieber_geothermal_2021}, Deep Earth Energy \citep{geoenergy_saskatchewan_2021}, Eavor Technologies \citep{ross_energy_2020}, and Climeon \citep{climeon_climeon_2021,geoenergy_baseload_2020} show there is a growing fervor to overcome the technology roadblocks currently holding EGS back. Projections show the size of the prize with success in EGS. Assuming a maximum cut-off depth of 7 km and a minimum reservoir temperature of 150\(^\circ C\), the EGS resource potential for electricity production in the continental United States might be at least \texttt{\char`\~}5,150 GWe, with an additional \texttt{\char`\~}1,500 MWe from NF-EGS \citep{augustine_geovision_2019}. To put this opportunity into context: the total utility-scale electricity generation capacity from \underline{all} sources in the United States was \texttt{\char`\~}1,200 GWe in 2019, over 4x less in magnitude \citep{eia_electric_2020}.
 
 \section{Geothermal Exploration}\label{ch2:geoexp}
+
 \subsection{System Type}
 \subsubsection{Direct Use}
 \subsubsection{Conventional}
