--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,206 @@
 
+@misc{eia_electric_2020,
+	title = {Electric {Power} {Annual} 2019},
+	url = {https://www.eia.gov/electricity/annual/},
+	urldate = {2021-06-03},
+	author = {{EIA}},
+	month = oct,
+	year = {2020},
+}
+
+@misc{noauthor_sas_nodate,
+	title = {{SAS} {Output}},
+	url = {https://www.eia.gov/electricity/annual/html/epa_04_03.html},
+	urldate = {2021-06-03},
+}
+
+@misc{moss_google_2021,
+	title = {Google and {Fervo} to develop {5MW} geothermal project to power {Nevada} data centers},
+	url = {https://www.datacenterdynamics.com/en/news/google-and-fervo-to-develop-5mw-geothermal-project-to-power-nevada-data-centers/},
+	abstract = {A first step towards greater geothermal adoption},
+	language = {en},
+	urldate = {2021-06-03},
+	author = {Moss, Sebastian},
+	month = may,
+	year = {2021},
+}
+
+@misc{shieber_geothermal_2021,
+	title = {Geothermal technology has enormous potential to power the planet and {Fervo} wants to tap it},
+	url = {https://social.techcrunch.com/2021/04/30/geothermal-technology-has-enormous-potential-to-power-the-planet-and-fervo-wants-to-tap-it/},
+	abstract = {Tapping the geothermal energy stored beneath the Earth’s surface as a way to generate renewable power is one of the new visions for the future that’s captured the attention of environmentalists and oil and gas engineers alike. That’s because it’s not only a way to generate p…},
+	language = {en-US},
+	urldate = {2021-06-03},
+	journal = {TechCrunch},
+	author = {Shieber, Jonathan},
+	month = apr,
+	year = {2021},
+}
+
+@misc{geoenergy_saskatchewan_2021,
+	title = {Saskatchewan geothermal project ready for final engineering},
+	url = {https://www.thinkgeoenergy.com/saskatchewan-geothermal-project-ready-for-final-engineering/},
+	abstract = {DEEP Earth Energy Production has successfully concluded Canada's first large volume geothermal production and injection test, being now ready for final feasibility engineering.},
+	language = {en-US},
+	urldate = {2021-06-03},
+	author = {GeoEnergy, Think},
+	month = mar,
+	year = {2021},
+}
+
+@misc{noauthor_deep_2021,
+	title = {{DEEP} {Earth} {Energy} {Production} {Corp}. completes test for geothermal project},
+	url = {https://www.energyglobal.com/other-renewables/30032021/deep-earth-energy-production-corp-completes-test-for-geothermal-project/},
+	abstract = {A large volume production and injection test has been completed for DEEP’s geothermal power project in Saskatchewan, Canada},
+	language = {en},
+	urldate = {2021-06-03},
+	journal = {Energy Global},
+	month = mar,
+	year = {2021},
+	note = {Section: Other renewables},
+}
+
+@misc{ross_energy_2020,
+	title = {The {Energy} of the {Future} is {Right} {Beneath} {Your} {Feet}},
+	url = {https://www.rollingstone.com/culture/culture-news/eavor-energy-company-review-1068287/},
+	abstract = {Wind and solar remain the renewables of choice, but they are only part of the solution says Malcolm Ross. The world also needs what some, like Duke Energy, call a “ZELFR”; a Zero-Emitting Load-Foll…},
+	language = {en-US},
+	urldate = {2021-06-03},
+	journal = {Rolling Stone},
+	author = {Ross, Malcolm},
+	month = oct,
+	year = {2020},
+}
+
+@misc{climeon_climeon_2021,
+	type = {Press {Release}},
+	title = {Climeon commissions second power plant in {Iceland}},
+	url = {https://climeon.com/investor-english/?type=single&title=climeon-commissions-second-power-plant-in-iceland&encrypted_id=287756C7C185BCA0#cision-table},
+	language = {en-US},
+	urldate = {2021-06-03},
+	journal = {Climeon},
+	author = {{Climeon}},
+	month = feb,
+	year = {2021},
+}
+
+@misc{geoenergy_baseload_2020,
+	title = {Baseload {Power} \& {Climeon} to build geothermal power plant in {Taiwan} {\textbar} {ThinkGeoEnergy} - {Geothermal} {Energy} {News}},
+	url = {https://www.thinkgeoenergy.com/baseload-power-climeon-to-build-geothermal-power-plant-in-taiwan/},
+	abstract = {Baseload Power Taiwan has ordered Climeon heat power units valued at \$4.1m for a geothermal power project in Taiwan.},
+	language = {en-US},
+	urldate = {2021-06-03},
+	author = {GeoEnergy, Think},
+	month = may,
+	year = {2020},
+}
+
+@misc{noauthor_fervo_nodate,
+	title = {Fervo {Energy} {Company} {\textbar} arpa-e.energy.gov},
+	url = {https://arpa-e.energy.gov/technologies/projects/solve-egs-surface-orbital-vibrator-evaluation-enhanced-geothermal-systems},
+	urldate = {2021-06-03},
+}
+
+@misc{geoenergy_flexible_2021,
+	title = {Flexible geothermal - {Fervo} {Energy} and {Turboden} to partner on dispatchable, flexible power generation {\textbar} {ThinkGeoEnergy} - {Geothermal} {Energy} {News}},
+	url = {https://www.thinkgeoenergy.com/flexible-geothermal-fervo-energy-and-turboden-to-partner-on-dispatchable-flexible-power-generation/},
+	abstract = {Power plant technology company Turboden and U.S. geothermal developer Fervo Energy are to work on the development of dispatchable and flexible power generation with geothermal ORC plants.},
+	language = {en-US},
+	urldate = {2021-06-03},
+	author = {GeoEnergy, Think},
+	month = jan,
+	year = {2021},
+}
+
+@article{stephens_assessing_2010,
+	series = {Energy {Security} - {Concepts} and {Indicators} with regular papers},
+	title = {Assessing innovation in emerging energy technologies: {Socio}-technical dynamics of carbon capture and storage ({CCS}) and enhanced geothermal systems ({EGS}) in the {USA}},
+	volume = {38},
+	issn = {0301-4215},
+	shorttitle = {Assessing innovation in emerging energy technologies},
+	url = {https://www.sciencedirect.com/science/article/pii/S0301421509009392},
+	doi = {10.1016/j.enpol.2009.12.003},
+	abstract = {This study applies a socio-technical systems perspective to explore innovation dynamics of two emerging energy technologies with potential to reduce greenhouse gas emissions from electrical power generation in the United States: carbon capture and storage (CCS) and enhanced geothermal systems (EGS). The goal of the study is to inform sustainability science theory and energy policy deliberations by examining how social and political dynamics are shaping the struggle for resources by these two emerging, not-yet-widely commercializable socio-technical systems. This characterization of socio-technical dynamics of CCS and EGS innovation includes examining the perceived technical, environmental, and financial risks and benefits of each system, as well as the discourses and actor networks through which the competition for resources – particularly public resources – is being waged. CCS and EGS were selected for the study because they vary considerably with respect to their social, technical, and environmental implications and risks, are unproven at scale and uncertain with respect to cost, feasibility, and life-cycle environmental impacts. By assessing the two technologies in parallel, the study highlights important social and political dimensions of energy technology innovation in order to inform theory and suggest new approaches to policy analysis.},
+	language = {en},
+	number = {4},
+	urldate = {2021-06-02},
+	journal = {Energy Policy},
+	author = {Stephens, Jennie C. and Jiusto, Scott},
+	month = apr,
+	year = {2010},
+	keywords = {Carbon capture and storage (CCS), Geothermal power, Socio-technical systems},
+	pages = {2020--2031},
+}
+
+@book{holl_what_2015,
+	title = {What did we learn about {EGS} in the {Cooper} {Basin}?},
+	abstract = {This report tries to summarise the experiences Geodynamics Limited had during over 12 years of operations in the Cooper Basin geothermal project. The document is not claiming to be complete in terms of listing all technical details but gives an extensive overview. It is listing all relevant internal and external technical reports as references for additional reading if someone has to find supplementary information.
+The Habanero reservoir will be described in detail after summarizing exploration, drilling and stimulation activities. This includes petrological description of the host rock (Big Lake Suite Granite) as well as reservoir environmental conditions and reservoir fluid chemistry.
+Technologies will be explained which were used to identify faults/fractures within the granite. The Habanero Fault model will be presented and the geomechanical conditions discussed.
+A major step forward for the recent understanding of the reservoir was the completion of the reservoir modelling after the Habanero 4 stimulation and testing operations. The results delivered crucial input for Habanero Field Development Plan.
+The conclusions presented at the end of this report are the results of a learning process lasting more than 12 years. There is no doubt that the interpretation of the data available to date and the modelling work performed so far will change with every new bit of information which might be added through future exploration and drilling.},
+	author = {Holl, Heinz-Gerd},
+	month = mar,
+	year = {2015},
+	doi = {10.13140/RG.2.2.33547.49443},
+}
+
+@inproceedings{durst_overview_2013,
+	address = {Pisa, Italy},
+	title = {Overview of the {Soultz} geothermal project},
+	url = {http://www.geoelec.eu/wp-content/uploads/2013/07/GEOELEC_Soultz_Pise.pdf},
+	language = {en},
+	author = {Durst, Pierre},
+	month = aug,
+	year = {2013},
+	pages = {35},
+}
+
+@article{manish03_united_2009,
+	title = {United {States}: {AltaRock} suspends {Geysers} drilling project},
+	url = {https://advance-lexis-com.libproxy.mit.edu/document/?pdmfid=1516831&crid=2831cac5-58d1-4f9d-a917-31e5eb56b391&pddocfullpath=%2Fshared%2Fdocument%2Fnews%2Furn%3AcontentItem%3A7WJK-R2G0-YBWY-S01T-00000-00&pdcontentcomponentid=343637&pdteaserkey=sr0&pditab=allpods&ecomp=1bvnk&earg=sr0&prid=b209ed0f-a725-4642-a2a6-a8cecfb91ad2},
+	urldate = {2021-06-02},
+	journal = {TenderInfo},
+	author = {{manish03}},
+	month = sep,
+	year = {2009},
+}
+
+@article{rutqvist_northwest_2015,
+	title = {The {Northwest} {Geysers} {EGS} {Demonstration} {Project}, {California}: {Pre}-stimulation {Modeling} and {Interpretation} of the {Stimulation}},
+	volume = {47},
+	issn = {1874-8953},
+	shorttitle = {The {Northwest} {Geysers} {EGS} {Demonstration} {Project}, {California}},
+	url = {https://doi.org/10.1007/s11004-013-9493-y},
+	doi = {10.1007/s11004-013-9493-y},
+	abstract = {The Northwest Geysers Enhanced Geothermal System (EGS) demonstration project aims to create an EGS by directly and systematically injecting cool water at relatively low pressure into a known High Temperature (280–400 °C) Zone (HTZ) located under the conventional (240 °C) geothermal steam reservoir at The Geysers geothermal field in California. In this paper, the results of coupled thermal, hydraulic, and mechanical (THM) analyses made using a model developed as part of the pre-stimulation phase of the EGS demonstration project is presented. The model simulations were conducted in order to investigate injection strategies and the resulting effects of cold-water injection upon the EGS system; in particular to predict the extent of the stimulation zone for a given injection schedule. The actual injection began on October 6, 2011, and in this paper a comparison of pre-stimulation model predictions with micro-earthquake (MEQ) monitoring data over the first few months of a one-year injection program is presented. The results show that, by using a calibrated THM model based on historic injection and MEQ data at a nearby well, the predicted extent of the stimulation zone (defined as a zone of high MEQ density around the injection well) compares well with observed seismicity. The modeling indicates that the MEQ events are related to shear reactivation of preexisting fractures, which is triggered by the combined effects of injection-induced cooling around the injection well and small changes in steam pressure as far as half a kilometer away from the injection well. Pressure-monitoring data at adjacent wells and satellite-based ground-surface deformation data were also used to validate and further calibrate reservoir-scale hydraulic and mechanical model properties. The pressure signature monitored from the start of the injection was particularly useful for a precise back-calculation of reservoir porosity. The first few months of reservoir pressure and surface deformation data were useful for estimating the reservoir-rock permeability and elastic modulus. Finally, although the extent of the calculated stimulation zone matches the field observations over the first few months of injection, the observed surface deformations and MEQ evolution showed more heterogeneous behavior as a result of more complex geology, including minor faults and fracture zones that are important for consideration in the analysis of energy production and the long-term evolution of the EGS system.},
+	language = {en},
+	number = {1},
+	urldate = {2021-06-02},
+	journal = {Mathematical Geosciences},
+	author = {Rutqvist, Jonny and Dobson, Patrick F. and Garcia, Julio and Hartline, Craig and Jeanne, Pierre and Oldenburg, Curtis M. and Vasco, Donald W. and Walters, Mark},
+	month = jan,
+	year = {2015},
+	pages = {3--29},
+}
+
+@article{lund_direct_2021,
+	title = {Direct utilization of geothermal energy 2020 worldwide review},
+	volume = {90},
+	issn = {0375-6505},
+	url = {https://www.sciencedirect.com/science/article/pii/S0375650520302078},
+	doi = {10.1016/j.geothermics.2020.101915},
+	abstract = {This paper presents a review of the worldwide applications of geothermal energy for direct utilization and updates the previous survey carried out in 2015. We also compare data from WGC1995, WGC2000, WGC2005, WGC2010, and WGC2015 presented at World Geothermal Congresses in Italy, Japan, Turkey, Indonesia and Australia. As in previous reports, an effort is made to quantify geothermal (ground-source) heat pump data. The present report is based on country update papers received from 62 countries and regions reporting on their direct utilization of geothermal energy. Twenty-six additional countries were added to the list based on other sources of information. Thus, direct utilization of geothermal energy in a total of 88 countries is an increase from 82 in 2015, 78 reported in 2010, 72 reported in 2005, 58 reported in 2000, and 28 reported in 1995. An estimation of the installed thermal power for direct utilization at the end of 2019 is used in this paper and equals 107,727 MWt, a 52.0 \% increase over the 2015 data, growing at a compound rate of 8.73 \% annually. The thermal energy used is 1,020,887 TJ/yr (283,580 GW h/yr.), a 72.3 \% increase over 2015, growing at a compound rate of 11.5 \% annually. The distribution of thermal energy used by category is approximately 58.8 \% for geothermal (ground-source) heat pumps, 18.0 \% for bathing and swimming (including balneology), 16.0 \% for space heating (of which 91.0 \% is for district heating), 3.5 \% for greenhouse heating, 1.6 \% for industrial applications, 1.3 \% for aquaculture pond and raceway heating, 0.4 \% for agricultural drying, 0.2 \% for snow melting and cooling, and 0.2 \% for other applications. Energy savings amounts to 596 million barrels (81.0 million tonnes) of equivalent oil annually, preventing 78.1 million tonnes of carbon and 252.6 million tonnes of CO2 from being released to the atmosphere. This includes savings for geothermal heat pumps in the cooling mode, compared to using fuel oil to generate electricity. Since it is almost impossible to separate direct-use from electric power generation for the following, they are combined: approximately 2647 wells were drilled in 42 countries, 34,500 person-years of effort were allocated in 59 countries, and US \$22.262 billion invested in projects by 53 countries.},
+	language = {en},
+	urldate = {2021-06-02},
+	journal = {Geothermics},
+	author = {Lund, John W. and Toth, Aniko N.},
+	month = feb,
+	year = {2021},
+	keywords = {Aquaculture, Balneology, Direct-use, District heating, Drilled, Energy savings, Geothermal, Greenhouses, Ground-source heat pumps, Industrial application, Investment, Manpower, Snow melting, Space heating, Spas, Wells},
+	pages = {101915},
+}
+
 @techreport{williams_assessment_2008,
 	address = {Menlo Park, California},
 	title = {Assessment of moderate-and high-temperature geothermal resources of the {United} {States}},
@@ -737,7 +939,7 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	year = {2019},
 }
 
-@misc{climeon_climeon_2021,
+@misc{climeon_climeon_2021-1,
 	title = {The {Climeon} {Heat} {Power} {System} - {How} does it work?},
 	url = {https://climeon.com/how-it-works/},
 	abstract = {Climeon Heat Power produces clean electricity from low-temperature waste heat from industrial processes and geothermal heat sources.},
@@ -949,7 +1151,7 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	urldate = {2021-04-14},
 }
 
-@techreport{schochet_development_2001-1,
+@techreport{schochet_development_2001,
 	title = {Development of a {Plan} to {Implement} {Enhanced} {Geothermal} {Systems} ({EGS}) in the {Animas} {Valley}, {New} {Mexico} - {Final} {Report} - 07/26/2000 - 02/01/2001; {FINAL}},
 	url = {http://inis.iaea.org/Search/search.aspx?orig_q=RN:33052100},
 	language = {English},
